include/sweeteditor/c_api.h

    typedef uint16_t U16Char;
    typedef uint16_t U16Char;
    typedef uint16_t U16Char;
/// @note General C API conventions in this file:
///   - editor_handle:   EditorCore handle (intptr_t) returned by create_editor
///   - document_handle: Document handle (intptr_t) returned by create_document_xxx
///   - out_size:        For all APIs that return binary payloads, this outputs the byte length
///   - Coordinate system: line / column are both 0-based
///   - Payload uses native byte order (LE). Caller must free it with free_binary_data
///   - These common rules are not repeated in each function comment

/// Text measurement callback set, passed when creating EditorCore
typedef struct {
    float (EDITOR_CALL* measure_text_width)(const U16Char* text, int32_t font_style);
    float (EDITOR_CALL* measure_inlay_hint_width)(const U16Char* text);
    float (EDITOR_CALL* measure_icon_width)(int32_t icon_id);
    void  (EDITOR_CALL* get_font_metrics)(float* arr, size_t length);
} text_measurer_t;
EDITOR_API const uint8_t* editor_ime_replace_document_text(intptr_t editor_handle,
                                                           size_t start_offset,
                                                           size_t end_offset,
                                                           const char* text,
                                                           int cursor_offset,
                                                           int script_hint,
                                                           size_t* out_size);
EDITOR_API const uint8_t* editor_ime_replace_input_context_text(intptr_t editor_handle,
                                                                size_t start_offset,
                                                                size_t end_offset,
                                                                const char* text,
                                                                int cursor_offset,
                                                                int script_hint,
                                                                size_t* out_size);
EDITOR_API const uint8_t* editor_ime_mark_input_context_range(intptr_t editor_handle,
                                                              size_t start_offset,
                                                              size_t end_offset,
                                                              int script_hint,
                                                              size_t* out_size);
EDITOR_API const uint8_t* editor_ime_notify_document_selection_changed(intptr_t editor_handle,
                                                                       size_t start_offset,
                                                                       size_t end_offset,
                                                                       size_t* out_size);
EDITOR_API const uint8_t* editor_ime_notify_input_context_selection_changed(intptr_t editor_handle,
                                                                            size_t start_offset,
                                                                            size_t end_offset,
                                                                            size_t* out_size);
EDITOR_API const uint8_t* editor_ime_update_input_state_text(intptr_t editor_handle,
                                                             uint64_t context_id,
                                                             int32_t document_start_offset,
                                                             const char* text,
                                                             int32_t selection_start_offset,
                                                             int32_t selection_end_offset,
                                                             int32_t composing_start_offset,
                                                             int32_t composing_end_offset,
                                                             int script_hint,
                                                             size_t* out_size);
EDITOR_API const uint8_t* editor_ime_update_text_model_state(intptr_t editor_handle,
                                                             int mode,
                                                             uint64_t context_id,
                                                             int32_t document_start_offset,
                                                             const char* text,
                                                             int32_t selection_start_offset,
                                                             int32_t selection_end_offset,
                                                             int32_t composing_start_offset,
                                                             int32_t composing_end_offset,
                                                             int script_hint,
                                                             size_t* out_size);
EDITOR_API const uint8_t* editor_ime_update_text_model_delta(intptr_t editor_handle,
                                                             int mode,
                                                             uint64_t context_id,
                                                             int32_t document_start_offset,
                                                             const char* old_text,
                                                             int32_t delta_start_offset,
                                                             int32_t delta_end_offset,
                                                             const char* delta_text,
                                                             int32_t selection_start_offset,
                                                             int32_t selection_end_offset,
                                                             int32_t composing_start_offset,
                                                             int32_t composing_end_offset,
                                                             int script_hint,
                                                             size_t* out_size);
EDITOR_API const uint8_t* editor_ime_update_input_state_selection(intptr_t editor_handle,
                                                                  uint64_t context_id,
                                                                  int32_t document_start_offset,
                                                                  int32_t selection_start_offset,
                                                                  int32_t selection_end_offset,
                                                                  size_t* out_size);
EDITOR_API const uint8_t* editor_ime_replace_input_state_text(intptr_t editor_handle,
                                                              uint64_t context_id,
                                                              int32_t document_start_offset,
                                                              size_t start_offset,
                                                              size_t end_offset,
                                                              const char* text,
                                                              int cursor_offset,
                                                              int script_hint,
                                                              size_t* out_size);
EDITOR_API const uint8_t* editor_ime_commit_input_state_text_replacement(intptr_t editor_handle,
                                                                         uint64_t context_id,
                                                                         int32_t document_start_offset,
                                                                         size_t start_offset,
                                                                         size_t end_offset,
                                                                         const char* text,
                                                                         int cursor_offset,
                                                                         int script_hint,
                                                                         size_t* out_size);
/// Delete text before the caret through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_delete_backward(intptr_t editor_handle,
                                                     size_t before_length,
                                                     int text_unit,
                                                     size_t* out_size);
/// Delete text after the caret through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_delete_forward(intptr_t editor_handle,
                                                    size_t after_length,
                                                    int text_unit,
                                                    size_t* out_size);
/// Delete surrounding text through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_delete_surrounding(intptr_t editor_handle,
                                                        size_t before_length,
                                                        size_t after_length,
                                                        int text_unit,
                                                        size_t* out_size);
/// Notify IME-driven selection movement.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_notify_selection_changed(intptr_t editor_handle,
                                                              size_t start_line,
                                                              size_t start_column,
                                                              size_t end_line,
                                                              size_t end_column,
                                                              size_t* out_size);
/// Notify IME-driven cursor movement.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_ime_notify_cursor_changed(intptr_t editor_handle,
                                                           size_t cursor_line,
                                                           size_t cursor_column,
                                                           size_t* out_size);
/// Set the current IME keyboard script class.
EDITOR_API const uint8_t* editor_ime_set_keyboard_script_class(intptr_t editor_handle, int script_class, size_t* out_size);
/// Get the current IME keyboard script class.
EDITOR_API int editor_ime_get_keyboard_script_class(intptr_t editor_handle);
/// Get the current IME synchronization snapshot.
/// @return ImeSyncSnapshot binary payload, returns NULL when editor handle is invalid
EDITOR_API const uint8_t* editor_get_ime_sync_snapshot(intptr_t editor_handle, size_t* out_size);
EDITOR_API const uint8_t* editor_get_ime_input_context(intptr_t editor_handle,
                                                       size_t before_length,
                                                       size_t after_length,
                                                       size_t* out_size);
EDITOR_API const uint8_t* editor_get_ime_text_model_input_context(intptr_t editor_handle,
                                                                  int mode,
                                                                  size_t before_length,
                                                                  size_t after_length,
                                                                  size_t* out_size);