platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_replace_document_text(
  int editor_handle,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_replace_input_context_text(
  int editor_handle,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_mark_input_context_range(
  int editor_handle,
  int start_offset,
  int end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_notify_document_selection_changed(
  int editor_handle,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8>
editor_ime_notify_input_context_selection_changed(
  int editor_handle,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint64,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_update_input_state_text(
  int editor_handle,
  int context_id,
  int document_start_offset,
  ffi.Pointer<ffi.Char> text,
  int selection_start_offset,
  int selection_end_offset,
  int composing_start_offset,
  int composing_end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Int,
    ffi.Uint64,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_update_text_model_state(
  int editor_handle,
  int mode,
  int context_id,
  int document_start_offset,
  ffi.Pointer<ffi.Char> text,
  int selection_start_offset,
  int selection_end_offset,
  int composing_start_offset,
  int composing_end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Int,
    ffi.Uint64,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_update_text_model_delta(
  int editor_handle,
  int mode,
  int context_id,
  int document_start_offset,
  ffi.Pointer<ffi.Char> old_text,
  int delta_start_offset,
  int delta_end_offset,
  ffi.Pointer<ffi.Char> delta_text,
  int selection_start_offset,
  int selection_end_offset,
  int composing_start_offset,
  int composing_end_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint64,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_update_input_state_selection(
  int editor_handle,
  int context_id,
  int document_start_offset,
  int selection_start_offset,
  int selection_end_offset,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint64,
    ffi.Int32,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_replace_input_state_text(
  int editor_handle,
  int context_id,
  int document_start_offset,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Uint64,
    ffi.Int32,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_commit_input_state_text_replacement(
  int editor_handle,
  int context_id,
  int document_start_offset,
  int start_offset,
  int end_offset,
  ffi.Pointer<ffi.Char> text,
  int cursor_offset,
  int script_hint,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete text before the caret through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_delete_backward(
  int editor_handle,
  int before_length,
  int text_unit,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete text after the caret through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_delete_forward(
  int editor_handle,
  int after_length,
  int text_unit,
  ffi.Pointer<ffi.Size> out_size,
);

/// Delete surrounding text through IME.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_delete_surrounding(
  int editor_handle,
  int before_length,
  int after_length,
  int text_unit,
  ffi.Pointer<ffi.Size> out_size,
);

/// Notify IME-driven selection movement.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_notify_selection_changed(
  int editor_handle,
  int start_line,
  int start_column,
  int end_line,
  int end_column,
  ffi.Pointer<ffi.Size> out_size,
);

/// Notify IME-driven cursor movement.
/// @return EditorActionResult binary payload, returns NULL when editor handle is invalid
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_notify_cursor_changed(
  int editor_handle,
  int cursor_line,
  int cursor_column,
  ffi.Pointer<ffi.Size> out_size,
);

/// Set the current IME keyboard script class.
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Int, ffi.Pointer<ffi.Size>)
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_ime_set_keyboard_script_class(
  int editor_handle,
  int script_class,
  ffi.Pointer<ffi.Size> out_size,
);

/// Get the current IME keyboard script class.
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_ime_get_keyboard_script_class(int editor_handle);

/// Get the current IME synchronization snapshot.
/// @return ImeSyncSnapshot binary payload, returns NULL when editor handle is invalid
@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.IntPtr, ffi.Pointer<ffi.Size>)>(
  assetId: _sweeteditorAssetId,
)
external ffi.Pointer<ffi.Uint8> editor_get_ime_sync_snapshot(
  int editor_handle,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_get_ime_input_context(
  int editor_handle,
  int before_length,
  int after_length,
  ffi.Pointer<ffi.Size> out_size,
);

@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Int,
    ffi.Size,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_get_ime_text_model_input_context(
  int editor_handle,
  int mode,
  int before_length,
  int after_length,
  ffi.Pointer<ffi.Size> out_size,
);

/// Text measurement callback set, passed when creating EditorCore
final class text_measurer_t extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Float Function(ffi.Pointer<ffi.Uint16> text, ffi.Int32 font_style)
    >
  >
  measure_text_width;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Float Function(ffi.Pointer<ffi.Uint16> text)>
  >
  measure_inlay_hint_width;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Float Function(ffi.Int32 icon_id)>
  >
  measure_icon_width;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Float> arr, ffi.Size length)
    >
  >
  get_font_metrics;
}
